fix white space top of screen, remove dark mode error

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,11 @@
 #root {
   max-width: 1280px;
   margin: 0 auto auto auto;
-  padding: 0 2rem 2rem 2rem;
+  padding: 2rem 2rem 2rem 2rem;
 
   text-align: center;
+}
+
+.App {
+  margin-top:-2rem;
 }
